Update html page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,12 +3,14 @@
 
 <head>
   <title>Substrate: One Million Remarks</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
-
-  <img src="image.jpg" />
-
+<body style="background-color:#000000">
+  <div class="text-center">
+    <img src="image.jpg" />
+  </div>
 </body>
 
 </html>
