Update page image

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
 
 <body style="background-color:#000000">
   <div class="text-center">
-    <img src="image.jpg" />
+    <img src="image.png" />
   </div>
 </body>
 
