--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Substrate: One Million Remarks</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <% include ../partials/head %>
 </head>
 
-<body style="background-color:#000000">
-  <div class="text-center">
-    <img src="image.png" />
+<body class="text-center">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+    </header>
+
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">You are lost.</h1>
+      <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
+        text, and add your own fullscreen background photo to make it your own.</p>
+      <p class="lead">
+        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+      </p>
+    </main>
+
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a
+            href="https://twitter.com/mdo">@mdo</a>.</p>
+      </div>
+    </footer>
   </div>
 </body>
+<% include ../partials/script %>
 
 </html>
